# Simple-Jazz-Reflex-Starter-Template

./: .env.example  .gitignore  IMPROVE.md  Makefile  README.md  REVIEW.md  config.py  flake.nix  how-work.md  package.json  pyproject.toml  requirements.txt  rxconfig.py
.github/workflows/: deploy.yml  tests.yml
app/: __init__.py  app.py  state.py
app/jazz/: __init__.py  schema.ts
tests/: __init__.py  test_config.py  test_state.py
